--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
+  
+[build.environment]
+  NPM_VERSION = "6.14.10"
+  NODE_VERSION = "10.23.1"
